--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
     "next": "^13.1.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "sharp": "^0.31.3",
-    "styled-components": "^5.3.6"
+    "sharp": "^0.31.3"
   },
   "devDependencies": {
     "@testing-library/dom": "^8.20.0",
@@ -29,12 +28,15 @@
     "@testing-library/react": "^13.4.0",
     "@types/node": "^18.13.0",
     "@types/react": "^18.0.28",
+    "autoprefixer": "^10.4.16",
     "eslint": "^8.34.0",
     "eslint-config-next": "^13.1.6",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.4.3",
     "jest-environment-jsdom": "^29.4.3",
     "json-server": "^0.17.1",
+    "postcss": "^8.4.31",
+    "tailwindcss": "^3.3.3",
     "typescript": "^4.9.5"
   },
   "resolutions": {
