--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@next/font": "^13.1.6",
     "@types/react-dom": "^18.0.11",
+    "cookies-next": "^4.0.0",
     "next": "^13.1.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
