--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@next/font": "^13.1.6",
     "@types/react-dom": "^18.0.11",
     "cookies-next": "^4.0.0",
+    "moment": "^2.29.4",
     "next": "^13.1.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
